# kimchi-chat

./: .gitignore  LICENSE  README.md  build-tauri.sh  next.config.ts  package-lock.json  package.json  start.sh
.kimchi/docs/: macos-build-instructions.md  macos-native-release-plan.md
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/models/: route.ts
components/: ChatWindow.tsx  MessageInput.tsx  MessageItem.tsx  ModelSelector.tsx  SettingsModal.tsx  Sidebar.tsx
hooks/: useChat.ts
lib/: kimchi-client.ts  store.ts  tauri.ts  types.ts
releases/: Kimchi-Chat-0.1.0-aarch64.dmg
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: chat.rs
